[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/player/player_script.gd" type="Script" id=1]

[sub_resource type="CylinderMesh" id=24]
height = 5.0

[sub_resource type="CylinderShape" id=18]
height = 4.8

[sub_resource type="Animation" id=23]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, 48 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect3:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 40 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect4:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 40, 40 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "focused"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, -10 ), Vector2( 32, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 58 ), Vector2( 32, 48 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect3:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -10, 40 ), Vector2( 0, 40 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect4:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 50, 40 ), Vector2( 40, 40 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "not_focus"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, -10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, 58 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect4:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 50, 40 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect3:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -10, 40 ) ]
}

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.283728, 0 )
visible = false
mesh = SubResource( 24 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.390158, 0 )
shape = SubResource( 18 )

[node name="GroundCast" type="RayCast" parent="."]
enabled = true

[node name="CameraPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.448, 0 )

[node name="Camera" type="Camera" parent="CameraPivot"]
current = true
far = 200.0

[node name="GrabRayCast" type="RayCast" parent="CameraPivot/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -15 )
collision_mask = 8
debug_shape_custom_color = Color( 0.92549, 0.92549, 1, 1 )
debug_shape_thickness = 3

[node name="Position3D" type="Position3D" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0449984, -4.77794 )

[node name="Crosshair" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -44.0
margin_right = 36.0
margin_bottom = 44.0

[node name="ColorRect" type="ColorRect" parent="Crosshair"]
margin_left = 32.0
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect2" type="ColorRect" parent="Crosshair"]
margin_left = 32.0
margin_top = 48.0
margin_right = 40.0
margin_bottom = 88.0

[node name="ColorRect3" type="ColorRect" parent="Crosshair"]
margin_top = 40.0
margin_right = 32.0
margin_bottom = 48.0

[node name="ColorRect4" type="ColorRect" parent="Crosshair"]
margin_left = 40.0
margin_top = 40.0
margin_right = 72.0
margin_bottom = 48.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Crosshair")
anims/RESET = SubResource( 23 )
anims/focused = SubResource( 21 )
anims/not_focus = SubResource( 22 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 33.0
margin_top = 658.0
margin_right = 534.0
margin_bottom = 761.0

[node name="Label" type="Label" parent="."]
modulate = Color( 0.74902, 0, 0, 1 )
margin_left = 44.0
margin_top = 666.0
margin_right = 478.0
margin_bottom = 768.0
text = "Debug:"
